# src/main/java/dk/jamesbabz/madkursus/service/models/EquipmentType.java
@@ -1,0 +1,3 @@
+package dk.jamesbabz.madkursus.service.models;
+
+public enum EquipmentType { STOVE, OVEN, POT, PAN, AIR_FRYER, THERMOMETER, MICROWAVE }
