# src/main/java/dk/jamesbabz/madkursus/service/models/OvenMode.java
@@ -1,0 +1,3 @@
+package dk.jamesbabz.madkursus.service.models;
+
+public enum OvenMode { CONVENTIONAL, FAN, GRILL }
