# src/main/java/dk/jamesbabz/madkursus/service/models/ThermometerType.java
@@ -1,0 +1,3 @@
+package dk.jamesbabz.madkursus.service.models;
+
+public enum ThermometerType { INSTANT_READ, PROBE, OTHER }
